--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,6 +30,7 @@
 {
     
     <button class="filter-on">Filter</button>
+    <button id="openModal">Открыть карту</button>
     <div class="filter-container hidden">
         <button type="button" class="close-btn hidden">&times;</button>
         <button type="button" class="reset-btn">⟳</button>
@@ -65,6 +66,17 @@
         <button type="submit" class="button-blue button-action">Apply</button>
     </div>
 }
+
+<!--Map window-->
+<div id="myModal" class="modal">
+    <!-- Модальное окно -->
+    <div class="modal-content">
+        <span class="close">&times;</span> <!-- Кнопка закрытия -->
+        <h2>Карта</h2>
+        <div id="map"></div> <!-- Элемент для карты -->
+    </div>
+</div>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <table class="table">
     <!--Head of the table-->
@@ -218,4 +230,63 @@
         document.getElementById("cityInput").value = "";
         document.getElementById("streetInput").value = "";
     });
+
+
+    /////////////////////////////
+    function _loadMap(position) {
+        const { latitude } = position.coords;
+        const { longitude } = position.coords;
+
+        console.log(`Координаты: ${latitude}, ${longitude}`);
+
+        const coords = [latitude, longitude];
+
+        // Инициализация карты
+        const map = L.map('map').setView(coords, 13); // Уровень масштабирования 13
+
+        // Добавление слоя карты
+        L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+        }).addTo(map);
+
+        // Добавление маркера на текущую позицию
+        const marker = L.marker(coords).addTo(map)
+            .bindPopup('Вы находитесь здесь!')
+            .openPopup();
+    }
+
+    // Обработка ошибок при получении геолокации
+    function handleError(err) {
+        console.warn(`Ошибка (${err.code}): ${err.message}`);
+    }
+
+    // Получаем геолокацию пользователя
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(_loadMap, handleError);
+    } else {
+        console.log("Геолокация не поддерживается вашим браузером.");
+    }
+
+    // Модальное окно
+    const modal = document.getElementById("myModal");
+    const btnOpen = document.getElementById("openModal");
+    const span = document.getElementsByClassName("close")[0];
+
+    // Открытие модального окна при нажатии кнопки
+    btnOpen.onclick = function (e) {
+        e.preventDefault();
+        modal.style.display = "block";
+    }
+
+    // Закрытие модального окна
+    span.onclick = function () {
+        modal.style.display = "none";
+    }
+
+    // Закрытие модального окна при клике вне его
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
 </script>
