--- a/Views/Home/AddElement.cshtml
+++ b/Views/Home/AddElement.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationPhoneBook.Models.PhoneItem
+﻿@model WebApplicationPhoneBook.Models.PersonItem
 
 @{
     ViewData["Title"] = "AddElement";
@@ -13,7 +13,7 @@
         <form asp-action="AddElement">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <input type="hidden" asp-for="ID" class="form-control" />
+                <input type="hidden" asp-for="Id" class="form-control" />
             </div>
             <!--input for name-->
             <div class="form-group">
@@ -23,9 +23,9 @@
             </div>
             <!--input for phone-->
             <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
+                <label asp-for="Phone_number" class="control-label"></label>
+                <input asp-for="Phone_number" class="form-control" />
+                <span asp-validation-for="Phone_number" class="text-danger"></span>
             </div>
             <!--input for country-->
             <div class="form-group">
@@ -228,9 +228,9 @@
     // handle selected country
     async function handleSelectCountry() {
         const countryId = document.getElementById("countrySelect").value;
-        await fetchCities(countryId);
         const selectedCountry = document.getElementById("countrySelect").options[document.getElementById("countrySelect").selectedIndex].text;
         document.getElementById("addressInputCountry").value = selectedCountry;
+        await fetchCities(countryId);
     }
 
    
@@ -265,9 +265,10 @@
     // handlw selected city
     async function handleSelectCity() {
         const cityId = document.getElementById("citySelect").value;
-        await fetchStreets(cityId);
+        //alert(cityId);
         const selectedCity = document.getElementById("citySelect").options[document.getElementById("citySelect").selectedIndex].text;
         document.getElementById("addressInputCity").value = selectedCity;
+        await fetchStreets(cityId);
     }
 
     //receiving streets of the selected city
@@ -322,9 +323,9 @@
     // handle selected street
     async function handleSelectStreet() {
         const streetId = document.getElementById("streetSelect").value;
-        await fetchHouseNumbers(streetId);
         const selectedStreet = document.getElementById("streetSelect").options[document.getElementById("streetSelect").selectedIndex].text;
         document.getElementById("addressInputStreet").value = selectedStreet;
+        await fetchHouseNumbers(streetId);
     }
 
     //function for house numbers
