--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,21 +10,6 @@
     <a asp-action="AddElement">Create New</a>
 </p>
 
-@* @using (Html.BeginForm("GetFilter", "Home", FormMethod.Post, new { id = "data-filter" }))
-{
-    <p>
-        <label>Имя</label><br />
-        @Html.TextBox("Name")
-    </p>
-     <p>
-        <label>Имя</label><br />
-        @Html.ListBox("ListFilter")
-    </p>
-    <button type="submit" class="button-blue button-action">Применить</button>
-
-} *@
-
-
 <!--Filter window-->
 @using (Html.BeginForm("GetFilter", "Home", FormMethod.Post, new { id = "data-filter" }))
 {
@@ -84,7 +69,7 @@
         <tr>
             <!--ID-->
             <th>
-                @Html.DisplayNameFor(model => model.PhoneItem.ID)
+                @Html.DisplayNameFor(model => model.PhoneItem.Id)
             </th>
             <!--Name-->
             <th>
@@ -92,7 +77,7 @@
             </th>
             <!--Phone-->
             <th>
-                @Html.DisplayNameFor(model => model.PhoneItem.Phone)
+                @Html.DisplayNameFor(model => model.PhoneItem.Phone_number)
             </th>
             <!--Country-->
             <th>
@@ -123,7 +108,7 @@
         <tr>
             <!--ID-->
             <td>
-                @Html.DisplayFor(modelItem => item.ID)
+                @Html.DisplayFor(modelItem => item.Id)
             </td>
             <!--Name-->
             <td>
@@ -131,7 +116,7 @@
             </td>
             <!--Phone-->
             <td>
-                @Html.DisplayFor(modelItem => item.Phone)
+                @Html.DisplayFor(modelItem => item.Phone_number)
             </td>
             <!--Country-->
             <td>
@@ -154,8 +139,8 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Edit", "EditPhone", new { id = item.ID }) |
-                <a href="#" onclick="deleteItm(@item.ID)">Delete</a>
+                @Html.ActionLink("Edit", "EditPhone", new { id = item.Id }) |
+                <a href="#" onclick="deleteItm(@item.Id)">Delete</a>
                 @* @Html.ActionLink("Delete", "Delete", new { id = item.ID }) *@
             </td>
         </tr>
