--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -100,7 +100,7 @@ body {
 
 /*//////////////////////////////////////////*/
 
-#map {
+/*#map {
     height: 80%; 
     width: 100%; 
 }
@@ -143,4 +143,4 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer; 
-}
+}*/
